# kraken-post-processor

./: README.md  pyproject.toml  requirements.txt
src/kraken_post_processor/: Galaxy185-report-taxa-taxa.xlsx  main.py  post_processing.py  spli_taxa.py
src/kraken_post_processor/Galaxy185-report-taxa/: Domain.csv  Family.csv  Genus.csv  Species.csv  Unclassified.csv
tests/: Galaxy-taxa.xlsx  Galaxy185-report.tsv  Galaxy_plus_pf_mpa.tsv  filtered.csv  filtered.xlsx  lin.csv
tests/taxonomic-classifications/: Class.csv  Order.csv  Phylum.csv
