[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kraken-post-processor"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "void@some.where" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/U.N. Owen/kraken-post-processor#readme"
Issues = "https://github.com/U.N. Owen/kraken-post-processor/issues"
Source = "https://github.com/U.N. Owen/kraken-post-processor"

[tool.hatch.version]
path = "src/kraken_post_processor/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/kraken_post_processor tests}"

[tool.coverage.run]
source_pkgs = ["kraken_post_processor", "tests"]
branch = true
parallel = true
omit = [
  "src/kraken_post_processor/__about__.py",
]

[tool.coverage.paths]
kraken_post_processor = ["src/kraken_post_processor", "*/kraken-post-processor/src/kraken_post_processor"]
tests = ["tests", "*/kraken-post-processor/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
